Agregado RolService y RoleController; implementada lógica para agregar y quitar roles a usuarios. Se eliminan datos redundantes en UserDtoExit.